Set up main grid structure in CSS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,57 @@
 </head>
 
 <body>
-    <h1>My Odin Projects</h1>
+    <div class="container">
+        <div class="sidebar">
+            <div class="sidebar-content">
+
+                Dashboard menu
+                Dashboard menu
+                Dashboard menu
+                Dashboard menu
+                Dashboard menu
+                Dashboard menu
+                Dashboard menu
+                Dashboard menu
+                Dashboard menu
+            </div>
+        </div>
+        <main>
+            <div class="header">
+                <h1>Victor Zhang</h1>
+            </div>
+            <div class="main-content">
+                <div class="projects-container">
+                    <div class="projects-header">My Projects</div>
+                    <div class="projects">
+                        <div class="project">project 1</div>
+                        <div class="project">project 1</div>
+                        <div class="project">project 1</div>
+                        <div class="project">project 1</div>
+                        <div class="project">project 1</div>
+                        <div class="project">project 1</div>
+                        <div class="project">project 1</div>
+                        <div class="project">project 1</div>
+                        <div class="project">project 1</div>
+                        <div class="project">project 1</div>
+                        <div class="project">project 1</div>
+                        <div class="project">project 1</div>
+                        <div class="project">project 1</div>
+                        <div class="project">project 1</div>
+                    </div>
+                </div>
+                <div class="rightside">
+                    <div class="announcements">
+                        Announcements
+                    </div>
+                    <div class="trending">
+                        Trending
+                    </div>
+                </div>
+            </div>
+        </main>
+
+    </div>
 
     <script src="index.js"></script>
 </body>
