Add menu in left sidebar with mdi fonts

--- a/index.html
+++ b/index.html
@@ -2,67 +2,108 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Projects Dashboard</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Odin Projects Dashboard</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
-    <div class="container">
-        <div class="sidebar">
-            <div class="sidebar-content">
-
-                Dashboard menu
-                Dashboard menu
-                Dashboard menu
-                Dashboard menu
-                Dashboard menu
-                Dashboard menu
-                Dashboard menu
-                Dashboard menu
-                Dashboard menu
-            </div>
-        </div>
-        <main>
-            <div class="header">
-                <h1>Victor Zhang</h1>
-            </div>
-            <div class="main-content">
-                <div class="projects-container">
-                    <div class="projects-header">My Projects</div>
-                    <div class="projects">
-                        <div class="project">project 1</div>
-                        <div class="project">project 1</div>
-                        <div class="project">project 1</div>
-                        <div class="project">project 1</div>
-                        <div class="project">project 1</div>
-                        <div class="project">project 1</div>
-                        <div class="project">project 1</div>
-                        <div class="project">project 1</div>
-                        <div class="project">project 1</div>
-                        <div class="project">project 1</div>
-                        <div class="project">project 1</div>
-                        <div class="project">project 1</div>
-                        <div class="project">project 1</div>
-                        <div class="project">project 1</div>
-                    </div>
-                </div>
-                <div class="rightside">
-                    <div class="announcements">
-                        Announcements
-                    </div>
-                    <div class="trending">
-                        Trending
-                    </div>
-                </div>
-            </div>
-        </main>
-
+  <div class="container">
+    <div class="sidebar">
+      <div class="sidebar-content">
+        <span class="material-icons menu-header">dashboard</span>
+        <div class="menu-header">Dashboard</div>
+        <span class="material-icons"></span>
+        <div class="menu-item">&nbsp;</div>
+        <span class="material-icons">home</span>
+        <div class="menu-item">Home</div>
+        <span class="material-icons">&#xea67;</span>
+        <div class="menu-item">Profile</div>
+        <span class="material-icons">&#xe625</span>
+        <div class="menu-item">Messages</div>
+        <span class="material-icons">history</span>
+        <div class="menu-item">History</div>
+        <span class="material-icons">task</span>
+        <div class="menu-item">Tasks</div>
+        <span class="material-icons">groups</span>
+        <div class="menu-item">Communities</div>
+        <span class="material-icons"></span>
+        <div class="menu-item">&nbsp;</div>
+        <span class="material-icons">settings</span>
+        <div class="menu-item">Settings</div>
+        <span class="material-icons">&#xe0c6</span>
+        <div class="menu-item">Support</div>
+        <span class="material-icons">&#xe8e8</span>
+        <div class="menu-item">Privacy</div>
+      </div>
     </div>
+    <main>
+      <div class="header">
+        <h1>Victor Zhang</h1>
+      </div>
+      <div class="main-content">
+        <div class="projects-container">
+          <div class="header-2">My Projects</div>
+          <div class="projects">
+            <div class="project">project 1</div>
+            <div class="project">project 1</div>
+            <div class="project">project 1</div>
+            <div class="project">project 1</div>
+            <div class="project">project 1</div>
+            <div class="project">project 1</div>
+            <div class="project">project 1</div>
+            <div class="project">project 1</div>
+            <div class="project">project 1</div>
+            <div class="project">project 1</div>
+            <div class="project">project 1</div>
+            <div class="project">project 1</div>
+            <div class="project">project 1</div>
+            <div class="project">project 1</div>
+          </div>
+        </div>
+        <div class="rightside">
+          <div class="rightside-container" id="top">
+            <div class="header-2">Announcements</div>
+            <div class="list-container">
+              <div class="list-item">
+                <h3>Site Maintenance</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, dsfadfasf adipisicing elit. Perspiciatis, laudantium!
+                </p>
+              </div>
+              <div class="list-item">
+                <h3>Community Share Day</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, dsfjkdjf df adipisicing elit. Perspiciatis, laudantium!
+                </p>
+              </div>
+              <div class="list-item">
+                <h3>Privacy Policy Update</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, fadf df adipisicing elit. Perspiciatis, laudantium!
+                </p>
+              </div>
 
-    <script src="index.js"></script>
+            </div>
+          </div>
+          <div class="rightside-container" id="bottom">
+            <div class="header-2">Trending</div>
+            <div class="list-container">
+              <div class="list-item">Site Maintenance</div>
+              <div class="list-item">Community Share Day</div>
+              <div class="list-item">Update privacy Policy</div>
+
+
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+  </main>
+
+  </div>
+
+  <script src="index.js"></script>
 </body>
 
 </html>
