Style the project card

--- a/index.html
+++ b/index.html
@@ -42,26 +42,86 @@
     </div>
     <main>
       <div class="header">
-        <h1>Victor Zhang</h1>
+        <h1>A Million Dreams</h1>
       </div>
       <div class="main-content">
         <div class="projects-container">
           <div class="header-2">My Projects</div>
           <div class="projects">
-            <div class="project">project 1</div>
-            <div class="project">project 1</div>
-            <div class="project">project 1</div>
-            <div class="project">project 1</div>
-            <div class="project">project 1</div>
-            <div class="project">project 1</div>
-            <div class="project">project 1</div>
-            <div class="project">project 1</div>
-            <div class="project">project 1</div>
-            <div class="project">project 1</div>
-            <div class="project">project 1</div>
-            <div class="project">project 1</div>
-            <div class="project">project 1</div>
-            <div class="project">project 1</div>
+            <div class="project">
+              <h3 class="project-name">Library</h3>
+              <p class="project-intro">Manage your books.  Add, Edit and remove them through an intuitive web interface.</p>
+              <img class="thumbnail" src="images/Library Medium.jpeg" alt="">
+              <span class="icon1 material-icons">home</span>
+                  <img class="icon2" src="images/icons8-github-96.svg" alt="">
+              <!-- <span class="icon2 material-icons">hub</span> -->
+              <span class="icon3 material-icons">face</span>
+            </div>
+            <div class="project">
+              <h3 class="project-name">Library</h3>
+              <p class="project-intro">Manage your books.  Add, Edit and remove them through an intuitive web interface.</p>
+              <img class="thumbnail" src="images/Library Medium.jpeg" alt="">
+              <span class="icon1 material-icons">home</span>
+                  <img class="icon2" src="images/icons8-github-96.svg" alt="">
+              <!-- <span class="icon2 material-icons">hub</span> -->
+              <span class="icon3 material-icons">face</span>
+            </div>
+            <div class="project">
+              <h3 class="project-name">Library</h3>
+              <p class="project-intro">Manage your books.  Add, Edit and remove them through an intuitive web interface.</p>
+              <img class="thumbnail" src="images/Library Medium.jpeg" alt="">
+              <span class="icon1 material-icons">home</span>
+                  <img class="icon2" src="images/icons8-github-96.svg" alt="">
+              <!-- <span class="icon2 material-icons">hub</span> -->
+              <span class="icon3 material-icons">face</span>
+            </div>
+            <div class="project">
+              <h3 class="project-name">Library</h3>
+              <p class="project-intro">Manage your books.  Add, Edit and remove them through an intuitive web interface.</p>
+              <img class="thumbnail" src="images/Library Medium.jpeg" alt="">
+              <span class="icon1 material-icons">home</span>
+                  <img class="icon2" src="images/icons8-github-96.svg" alt="">
+              <!-- <span class="icon2 material-icons">hub</span> -->
+              <span class="icon3 material-icons">face</span>
+            </div>
+            <div class="project">
+              <h3 class="project-name">Library</h3>
+              <p class="project-intro">Manage your books.  Add, Edit and remove them through an intuitive web interface.</p>
+              <img class="thumbnail" src="images/Library Medium.jpeg" alt="">
+              <span class="icon1 material-icons">home</span>
+                  <img class="icon2" src="images/icons8-github-96.svg" alt="">
+              <!-- <span class="icon2 material-icons">hub</span> -->
+              <span class="icon3 material-icons">face</span>
+            </div>
+            <div class="project">
+              <h3 class="project-name">Library</h3>
+              <p class="project-intro">Manage your books.  Add, Edit and remove them through an intuitive web interface.</p>
+              <img class="thumbnail" src="images/Library Medium.jpeg" alt="">
+              <span class="icon1 material-icons">home</span>
+                  <img class="icon2" src="images/icons8-github-96.svg" alt="">
+              <!-- <span class="icon2 material-icons">hub</span> -->
+              <span class="icon3 material-icons">face</span>
+            </div>
+            <div class="project">
+              <h3 class="project-name">Library</h3>
+              <p class="project-intro">Manage your books.  Add, Edit and remove them through an intuitive web interface.</p>
+              <img class="thumbnail" src="images/Library Medium.jpeg" alt="">
+              <span class="icon1 material-icons">home</span>
+                  <img class="icon2" src="images/icons8-github-96.svg" alt="">
+              <!-- <span class="icon2 material-icons">hub</span> -->
+              <span class="icon3 material-icons">face</span>
+            </div>
+            <div class="project">
+              <h3 class="project-name">Library</h3>
+              <p class="project-intro">Manage your books.  Add, Edit and remove them through an intuitive web interface.</p>
+              <img class="thumbnail" src="images/Library Medium.jpeg" alt="">
+              <span class="icon1 material-icons">home</span>
+                  <img class="icon2" src="images/icons8-github-96.svg" alt="">
+              <!-- <span class="icon2 material-icons">hub</span> -->
+              <span class="icon3 material-icons">face</span>
+            </div>
+
+
           </div>
         </div>
         <div class="rightside">
