--- a/index.html
+++ b/index.html
@@ -43,85 +43,13 @@
     <main>
       <div class="header">
         <h1>A Million Dreams</h1>
+        <p>sawfiz@github</p>
       </div>
       <div class="main-content">
         <div class="projects-container">
           <div class="header-2">My Projects</div>
           <div class="projects">
-            <div class="project">
-              <h3 class="project-name">Library</h3>
-              <p class="project-intro">Manage your books.  Add, Edit and remove them through an intuitive web interface.</p>
-              <img class="thumbnail" src="images/Library Medium.jpeg" alt="">
-              <span class="icon1 material-icons">home</span>
-                  <img class="icon2" src="images/icons8-github-96.svg" alt="">
-              <!-- <span class="icon2 material-icons">hub</span> -->
-              <span class="icon3 material-icons">face</span>
-            </div>
-            <div class="project">
-              <h3 class="project-name">Library</h3>
-              <p class="project-intro">Manage your books.  Add, Edit and remove them through an intuitive web interface.</p>
-              <img class="thumbnail" src="images/Library Medium.jpeg" alt="">
-              <span class="icon1 material-icons">home</span>
-                  <img class="icon2" src="images/icons8-github-96.svg" alt="">
-              <!-- <span class="icon2 material-icons">hub</span> -->
-              <span class="icon3 material-icons">face</span>
-            </div>
-            <div class="project">
-              <h3 class="project-name">Library</h3>
-              <p class="project-intro">Manage your books.  Add, Edit and remove them through an intuitive web interface.</p>
-              <img class="thumbnail" src="images/Library Medium.jpeg" alt="">
-              <span class="icon1 material-icons">home</span>
-                  <img class="icon2" src="images/icons8-github-96.svg" alt="">
-              <!-- <span class="icon2 material-icons">hub</span> -->
-              <span class="icon3 material-icons">face</span>
-            </div>
-            <div class="project">
-              <h3 class="project-name">Library</h3>
-              <p class="project-intro">Manage your books.  Add, Edit and remove them through an intuitive web interface.</p>
-              <img class="thumbnail" src="images/Library Medium.jpeg" alt="">
-              <span class="icon1 material-icons">home</span>
-                  <img class="icon2" src="images/icons8-github-96.svg" alt="">
-              <!-- <span class="icon2 material-icons">hub</span> -->
-              <span class="icon3 material-icons">face</span>
-            </div>
-            <div class="project">
-              <h3 class="project-name">Library</h3>
-              <p class="project-intro">Manage your books.  Add, Edit and remove them through an intuitive web interface.</p>
-              <img class="thumbnail" src="images/Library Medium.jpeg" alt="">
-              <span class="icon1 material-icons">home</span>
-                  <img class="icon2" src="images/icons8-github-96.svg" alt="">
-              <!-- <span class="icon2 material-icons">hub</span> -->
-              <span class="icon3 material-icons">face</span>
-            </div>
-            <div class="project">
-              <h3 class="project-name">Library</h3>
-              <p class="project-intro">Manage your books.  Add, Edit and remove them through an intuitive web interface.</p>
-              <img class="thumbnail" src="images/Library Medium.jpeg" alt="">
-              <span class="icon1 material-icons">home</span>
-                  <img class="icon2" src="images/icons8-github-96.svg" alt="">
-              <!-- <span class="icon2 material-icons">hub</span> -->
-              <span class="icon3 material-icons">face</span>
-            </div>
-            <div class="project">
-              <h3 class="project-name">Library</h3>
-              <p class="project-intro">Manage your books.  Add, Edit and remove them through an intuitive web interface.</p>
-              <img class="thumbnail" src="images/Library Medium.jpeg" alt="">
-              <span class="icon1 material-icons">home</span>
-                  <img class="icon2" src="images/icons8-github-96.svg" alt="">
-              <!-- <span class="icon2 material-icons">hub</span> -->
-              <span class="icon3 material-icons">face</span>
-            </div>
-            <div class="project">
-              <h3 class="project-name">Library</h3>
-              <p class="project-intro">Manage your books.  Add, Edit and remove them through an intuitive web interface.</p>
-              <img class="thumbnail" src="images/Library Medium.jpeg" alt="">
-              <span class="icon1 material-icons">home</span>
-                  <img class="icon2" src="images/icons8-github-96.svg" alt="">
-              <!-- <span class="icon2 material-icons">hub</span> -->
-              <span class="icon3 material-icons">face</span>
-            </div>
-
-
+            <!-- Projects are added here by javascript -->
           </div>
         </div>
         <div class="rightside">
@@ -129,17 +57,17 @@
             <div class="header-2">Announcements</div>
             <div class="list-container">
               <div class="list-item">
-                <h3>Site Maintenance</h3>
+                <h4>Site Maintenance</h4>
                 <p>Lorem ipsum dolor sit amet consectetur, dsfadfasf adipisicing elit. Perspiciatis, laudantium!
                 </p>
               </div>
               <div class="list-item">
-                <h3>Community Share Day</h3>
+                <h4>Community Share Day</h4>
                 <p>Lorem ipsum dolor sit amet consectetur, dsfjkdjf df adipisicing elit. Perspiciatis, laudantium!
                 </p>
               </div>
               <div class="list-item">
-                <h3>Privacy Policy Update</h3>
+                <h4>Privacy Policy Update</h4>
                 <p>Lorem ipsum dolor sit amet consectetur, fadf df adipisicing elit. Perspiciatis, laudantium!
                 </p>
               </div>
@@ -152,8 +80,6 @@
               <div class="list-item">Site Maintenance</div>
               <div class="list-item">Community Share Day</div>
               <div class="list-item">Update privacy Policy</div>
-
-
             </div>
           </div>
         </div>
