Get rid of all the clutter to make the page look clean

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="container">
-    <div class="sidebar">
+    <!-- <div class="sidebar">
       <div class="sidebar-content">
         <span class="material-icons menu-header">dashboard</span>
         <div class="menu-header">Dashboard</div>
@@ -39,35 +39,35 @@
         <span class="material-icons">&#xe8e8</span>
         <div class="menu-item">Privacy</div>
       </div>
-    </div>
+    </div> -->
     <main>
       <div class="header">
         <h1>A Million Dreams</h1>
-        <p>sawfiz@github</p>
+        <p class="github-name">sawfiz@github</p>
       </div>
       <div class="main-content">
         <div class="projects-container">
-          <div class="header-2">My Projects</div>
+          <!-- <h2>My Projects</h2> -->
           <div class="projects">
             <!-- Projects are added here by javascript -->
           </div>
         </div>
-        <div class="rightside">
+        <!-- <div class="rightside">
           <div class="rightside-container" id="top">
-            <div class="header-2">Announcements</div>
+            <h2>Announcements</h2>
             <div class="list-container">
               <div class="list-item">
-                <h4>Site Maintenance</h4>
+                <h3>Site Maintenance</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, dsfadfasf adipisicing elit. Perspiciatis, laudantium!
                 </p>
               </div>
               <div class="list-item">
-                <h4>Community Share Day</h4>
+                <h3>Community Share Day</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, dsfjkdjf df adipisicing elit. Perspiciatis, laudantium!
                 </p>
               </div>
               <div class="list-item">
-                <h4>Privacy Policy Update</h4>
+                <h3>Privacy Policy Update</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, fadf df adipisicing elit. Perspiciatis, laudantium!
                 </p>
               </div>
@@ -75,14 +75,14 @@
             </div>
           </div>
           <div class="rightside-container" id="bottom">
-            <div class="header-2">Trending</div>
+            <h2>Trending</h2>
             <div class="list-container">
               <div class="list-item">Site Maintenance</div>
               <div class="list-item">Community Share Day</div>
               <div class="list-item">Update privacy Policy</div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
   </div>
   </main>
