Clean up unused elements and styling from the original project requirements

--- a/index.html
+++ b/index.html
@@ -11,84 +11,19 @@
 </head>
 
 <body>
-  <div class="container">
-    <!-- <div class="sidebar">
-      <div class="sidebar-content">
-        <span class="material-icons menu-header">dashboard</span>
-        <div class="menu-header">Dashboard</div>
-        <span class="material-icons"></span>
-        <div class="menu-item">&nbsp;</div>
-        <span class="material-icons">home</span>
-        <div class="menu-item">Home</div>
-        <span class="material-icons">&#xea67;</span>
-        <div class="menu-item">Profile</div>
-        <span class="material-icons">&#xe625</span>
-        <div class="menu-item">Messages</div>
-        <span class="material-icons">history</span>
-        <div class="menu-item">History</div>
-        <span class="material-icons">task</span>
-        <div class="menu-item">Tasks</div>
-        <span class="material-icons">groups</span>
-        <div class="menu-item">Communities</div>
-        <span class="material-icons"></span>
-        <div class="menu-item">&nbsp;</div>
-        <span class="material-icons">settings</span>
-        <div class="menu-item">Settings</div>
-        <span class="material-icons">&#xe0c6</span>
-        <div class="menu-item">Support</div>
-        <span class="material-icons">&#xe8e8</span>
-        <div class="menu-item">Privacy</div>
-      </div>
-    </div> -->
-    <main>
-      <div class="header">
-        <h1>A Million Dreams</h1>
-        <p class="github-name">sawfiz@github</p>
-      </div>
-      <div class="main-content">
-        <div class="projects-container">
-          <!-- <h2>My Projects</h2> -->
-          <div class="projects">
-            <!-- Projects are added here by javascript -->
-          </div>
-        </div>
-        <!-- <div class="rightside">
-          <div class="rightside-container" id="top">
-            <h2>Announcements</h2>
-            <div class="list-container">
-              <div class="list-item">
-                <h3>Site Maintenance</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, dsfadfasf adipisicing elit. Perspiciatis, laudantium!
-                </p>
-              </div>
-              <div class="list-item">
-                <h3>Community Share Day</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, dsfjkdjf df adipisicing elit. Perspiciatis, laudantium!
-                </p>
-              </div>
-              <div class="list-item">
-                <h3>Privacy Policy Update</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, fadf df adipisicing elit. Perspiciatis, laudantium!
-                </p>
-              </div>
-
-            </div>
-          </div>
-          <div class="rightside-container" id="bottom">
-            <h2>Trending</h2>
-            <div class="list-container">
-              <div class="list-item">Site Maintenance</div>
-              <div class="list-item">Community Share Day</div>
-              <div class="list-item">Update privacy Policy</div>
-            </div>
-          </div>
-        </div> -->
-      </div>
+  <div class="header-container">
+    <div class="header">
+      <h1>A Million Dreams</h1>
+      <p class="github-name">sawfiz@github</p>
+    </div>
   </div>
-  </main>
-
+  <div class="projects-container">
+    <!-- <h2>My Projects</h2> -->
+    <div class="projects">
+      <!-- Projects are added here by javascript -->
+    </div>
   </div>
-
+  <footer>Copyright&copy; sawfiz@github</footer>
   <script src="index.js"></script>
 </body>
 
